<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/White"
    tools:context="tonchev.sportsdirect.SelectionActivity">
    <TextView

        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="verdana"
        android:textColorLink="@color/Blue"
        android:text="SPORTS"
        android:textSize="24sp"
        android:id="@+id/sports" />
    <TextView

        android:textColor="@color/Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="verdana"
        android:textColorLink="@color/Red"
        android:text="DIRECT.com"
        android:textSize="24sp"
        android:id="@+id/direct" />
    <View
        android:layout_width="1dp"
        android:layout_height="120dp"
        android:layout_weight="0.00"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selection"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/man"
        android:textSize="35sp" />

    <Button
        android:id="@+id/ladiesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lady"
        android:textSize="35sp"
      />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessories"
        android:textSize="35sp"/>

</LinearLayout>
