<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    tools:context="tonchev.sportsdirect.MenClothingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView

                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:textColorLink="@color/Blue"
                android:text="SPORTS"
                android:textSize="24sp"
                android:id="@+id/sports"
                />

            <TextView

                android:id="@+id/direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="DIRECT.com"
                android:textColor="@color/Red"
                android:textColorLink="@color/Red"
                android:textSize="24sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/usericon"
                android:onClick="callMyHistory"/>

            <ImageButton
                android:id="@+id/shoppingbag_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shoppingbag"
                android:onClick="callShoppingBag"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/men_clothing"
        android:textSize="35sp"
        android:textColor="#000000"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/cl_hoodies"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hoody"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/hoody"/>

        <Button
            android:id="@+id/cl_jackets"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/jacket"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/jacket"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/cl_swimwear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/swimwear"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/swimwear"/>

        <Button
            android:id="@+id/cl_tshirts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tshirt"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/tshirt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/cl_jeans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/jeans"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/jeans"/>

    </LinearLayout>

</LinearLayout>
