<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    tools:context="tonchev.sportsdirect.MenFootwearActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView

                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:textColorLink="@color/Blue"
                android:text="SPORTS"
                android:textSize="24sp"
                android:id="@+id/sports"
                />

            <TextView

                android:id="@+id/direct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="DIRECT.com"
                android:textColor="@color/Red"
                android:textColorLink="@color/Red"
                android:textSize="24sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/usericon"
                android:onClick="callMyHistory"/>

            <ImageButton
                android:id="@+id/shoppingbag_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shoppingbag"
                android:onClick="callShoppingBag"/>
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/men_footwear"
        android:textColor="@color/Black"
        android:textSize="35sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/men_football"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/football"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/football"/>

        <Button
            android:id="@+id/men_fliflops"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/flipflops"
            android:textSize="25sp"
            android:textColor="@color/White"
            android:background="@drawable/flipflops"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/men_sandals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/sandals"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="@color/White"
            android:background="@drawable/sandals"/>

        <Button
            android:id="@+id/men_running"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/running"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="@color/White"
            android:background="@drawable/runningshoe"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/men_boots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/boots"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:background="@drawable/bootsshoesh"/>
    </LinearLayout>

</LinearLayout>
